--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=batch
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://10.64.4.48:3218/batch?useUnicode=true&characterEncoding=utf8
 #spring.datasource.username=deployop
@@ -15,3 +16,19 @@ spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.batch.job.enabled=false
 server.port=8889
 spring.main.allow-bean-definition-overriding=true
+
+#logging.level.root=debug
+
+
+spring.kafka.bootstrap-servers=10.64.4.48:9092
+spring.kafka.consumer.group-id=batch
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.batch-size=16384
+spring.kafka.producer.buffer-memory=33554432
+
