--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ dependencies {
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.2'
 
 	testCompileOnly 'org.projectlombok:lombok:1.18.2'
+
+	implementation 'org.springframework.kafka:spring-kafka'
+
 }
 
 
